# ig-agent1

./: .env.example  .gitignore  app.py  pyproject.toml  runtime.py
.github/workflows/: ci.yml
agents/: analytics_agent.py  approval_agent.py  creative_direction_agent.py  editor_agent.py  idea_agent.py  template_finder_agent.py  template_render_agent.py  writer_agent.py
config/: settings.py
data/: templates.json
docs/: engineering-design.md  implementation-backlog.md
models/: post.py  template.py
pipeline/: content_pipeline.py
prompts/: brand_rules.py  creative_prompt.py  editor_prompt.py  idea_prompt.py  writer_prompt.py
schemas/: creative_schema.py  editor_schema.py  idea_schema.py  writer_schema.py
services/: approval_store.py  openai_service.py  placid_service.py  scheduler_service.py  template_repository.py  template_validation.py
web/: main.py
web/templates/: base.html  index.html  post_detail.html  review_queue.html
